Fri Nov 23 19:29:54 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Servant_Impl_Base.cpp:
          Layout change

        * MPC/config/ciao_client_dnc.mpb:
        * MPC/config/ciao_vc8warnings.mpb:
        * MPC/config/ciao_vcwarnings.mpb:
          Renamed vc8warnings to vcwarnings, this file is also for vc9 from now

Thu Nov 22 15:41:13 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * ciao/Dynamic_Component_Activator.inl:

          New file. Inlined short methods to comply with ACE/TAO/CIAO
          coding standards.

        * ciao/Dynamic_Component_Activator.h:
        * ciao/Dynamic_Component_Activator.cpp:

          Minor changes necessary for the new inline file mentioned above.

        * ciao/Dynamic_Component_Activator.h:

          The incarnate and etherealize (inherited from PortableServer::ServantActivator)
          were implicitly virtual, made those methods explicitly virtual by using the virtual
          key word. This is a cosmetic change to comply with ACE/TAO/CIAO coding standards.

Wed Nov 21 17:41:14 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * ciao/Context_Impl_Base.inl:

          New file. Inlined short methods to comply with ACE/TAO/CIAO
          coding standards.

        * ciao/Context_Impl_Base.h:
        * ciao/Context_Impl_Base.cpp:

          Minor changes necessary for the new inline file mentioned above.

        * ciao/Context_Impl_Base.cpp:
        * ciao/Dynamic_Component_Servant_Base.cpp:

          Added a comment on why we have unecessary default constructor.
          The default constructor is here to keep MSVC happy and should
          not be used at all. The default constructor should be removed
          in the future. Until then, ACE_ASSERT is used in the default
          constructor to detect a runtime call to the default constructor.

Wed Nov 21 16:36:28 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * ciao/Container_Base.inl:
